# magatamy-backend

./: .env.dev  .gitignore  README.md  alembic.ini  database.db  main.py  pre_start.py  pyproject.toml  requirements.txt  testfile.py
alembic/: env.py
alembic/versions/: 72f1163b4ccf_init.py  86f3aa28a61f_init_migration.py  90e1d8b259ca_added_extra_id_to_form.py  a6be75454216_added_user_table.py  aa360767967f_init_migration.py  bd7f405436f0_added_promocodes.py  cec5d24aa0e2_init_migration.py  f62e8ecbe71b_added_ordering_by_position_in_form_s_.py
backend/: __init__.py  __main__.py
backend/alembic/: env.py
backend/alembic/versions/: 50bf7ee405ec_several_fixes.py  7563c4b0daa8_added_popular_field_to_product_removed_.py  7b6e34392f03_added_money_field_to_user.py  86f3aa28a61f_init_migration.py  b388fa9a6582_added_category_field.py  bd7f405436f0_added_promocodes.py
backend/crud/: base.py  crud_auth.py  crud_product.py
backend/db/: base.py  session.py
backend/models/: associations.py  auth.py  product.py  ticket.py
backend/schemas/: auth.py  discord.py
backend/utils/: config.py
crud/: __init__.py  base.py  crud_auth.py  crud_product.py
crud/crud_ticket/: __init__.py  answer.py  form.py  question.py
db/: base.py  session.py
discordbot/: all_text.json  config.py  main.py
discordbot/cogs/: on_button_click.py  ready.py  whitelist_msg.py
discordbot/modules/: embed.py  modals.py  rcon.py
models/: __init__.py  associations.py  auth.py  product.py  ticket.py
routes/api/: __init__.py  deps.py
routes/auth/: __init__.py
routes/misc/: __init__.py
schemas/: __init__.py  auth.py  discord.py  minecraft.py  product.py
schemas/payment/: __init__.py  enot.py
schemas/product/: __init__.py
schemas/ticket/: __init__.py  form.py  question.py
static/css/: admin.css  agreement.css  base.css  colors.css  footer.css  form.css  header.css  index.css  servers.css  shop.css  social.css  style.css  trash.css
static/js/: admin-cards.js  admin.js  card-media.js  card-staff.js  discordImage.js  discordpartners.js  form.js  header.js  products.js  shop.js  trash.js
templates/: admin.html  agreement.html  base.html  index.html  map.html  policy.html  server-pass.html  servers.html  shop.html  social.html
utils/: auth.py  config.py
utils/discord/: __init__.py  user.py
utils/minecraft/: __init__.py
utils/payment/: __init__.py
utils/ticket/: __init__.py
(+39 files in other folders)
