[tool.poetry]
name = "magatamy"
version = "0.1.0"
description = "Backend for magatamy website"
authors = ["megared"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.3.0"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
mcrcon = "^0.7.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
a2wsgi = "^1.7.0"
httpx = "^0.25.0"
rcon = "^2.4.4"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
