[tool.poetry]
name = "magatamy"
version = "0.1.0"
description = "Backend for magatamy website"
authors = ["megared"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.106.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.5.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
a2wsgi = "^1.7.0"
httpx = "^0.25.0"
rcon = "^2.4.4"
python-dotenv = "^1.0.0"
async-lru = "2.0.4"
fastapi-cache2 = "^0.2.1"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
