[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for magatamy website"
authors = ["megared"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
pydantic = "^2.5.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
async-lru = "2.0.4"
fastapi-cache2 = "^0.2.1"
psycopg2 = {version = "^2.9.9", platform = "win32"}
psycopg2-binary = [
    {version = "^2.9.9", platform = "linux"},
    {version = "^2.9.9", platform = "darwin"}
]
mctools = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.poetry.group.production.dependencies]
gunicorn = { version = "^22.0.0", platform = "linux"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
